<resources>
    <string name="app_name">UniBucIFR2025</string>

    <string name="hello_world">Hello World!</string>
    <string name="click_me">Click Me!</string>

    <string name="north">North</string>
    <string name="south">South</string>
    <string name="east">East</string>
    <string name="west">West</string>
    <string name="unknown">Unknown</string>

<!--    AUTHENTICATION-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="go_to_register">Go To Register</string>

<!--HOME-->
    <string name="home_page">Home Page</string>
    <string name="hint_write_your_email_here">Write your email here…</string>
    <string name="hint_write_your_password_here">Write your password here…</string>
    <string name="insert_city">Insert City</string>
    <string name="get_directions_city">Get Directions City</string>
    <string name="go_to_users">Go To Users</string>
    <string name="log_out">Log Out</string>
    <string name="get_address_with_users">Get Address with Users</string>
    <string name="get_job_with_users">Get Job with Users</string>
    <string name="get_user_with_jobs">Get User With Jobs</string>
    <string name="get_user_with_identity_card">Get User With Identity Card</string>
</resources>